--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>4D viagens</title>
     <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="responsivo.css">
 </head>
 <body>
     <main id="explore">
@@ -19,6 +20,10 @@
                 <a href="#ofertas">Ofertas</a>
                 <a href="#avaliacoes">Porque escolher nos</a>
                 <a href="#comentarios">Comentarios</a>
+            </div>
+
+            <div id="min_menu">
+                <ion-icon name="menu-sharp"></ion-icon>
             </div>
         </header>
 
