--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@
      <footer id="footer">
         <p>&copy; Diogo Noronha da Costa</p>
         <p>Contato: 11-12345678900</p>
-     </footer>
+    </footer>
 
+    <script src="menu.js"></script>
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
