--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="conteiner-cards">
 
             <li class="card">
-                <a href="#"><img src="imagens/Hotel-Riu-Cancun.jpg" alt=""></a>
+                <a href="https://amzn.to/3MRHsyp"><img src="imagens/Hotel-Riu-Cancun.jpg" alt=""></a>
                 <div class="texto_card">
                     <h2>Hotel Riu Cancun</h2>
                     <div class="estrelas">
@@ -57,7 +57,7 @@
             </li>
 
             <li class="card">
-                <a href="#"><img src="imagens/Maldivas.jpg" alt=""></a>
+                <a href="https://amzn.to/3MRHsyp"><img src="imagens/Maldivas.jpg" alt=""></a>
                 <div class="texto_card">
                     <h2>Maldivas Mexico</h2>
                     <div class="estrelas">
@@ -70,7 +70,7 @@
                 </div>
             </li>
             <li class="card">
-                <a href="#"><img src="imagens/Praia-do-Cerrado-Brasil.jpg" alt=""></a>
+                <a href="https://amzn.to/3MRHsyp"><img src="imagens/Praia-do-Cerrado-Brasil.jpg" alt=""></a>
                 <div class="texto_card">
                     <h2>Praia do Cerrado Brasil</h2>
                     <div class="estrelas">
